# MJPEGCapture-for-BBB

./: .gitignore  CMakeLists.txt  MJPEGCapture.cpp  MJPEGCapture.h  README.md  camera.cpp  facetrack.cpp  facetrack_benchmark.cpp  huffman_tables.h  mjpeg_benchmark.cpp  test_mjpeg.cpp  test_opencv.cpp
